[Terry N.] use StringBuilder vice StringBuffer, dec. vars outside of loops